# databricks-python-wheel-job-run

./: .env.sample  .flake8  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: create_job_run_on_existing_cluster.py  create_job_run_on_new_cluster.py  job_run_notification_workbook_example.py  notifications.md
src/databricks/: databricks_service.py
src/dbscript1/: script.py
src/dbscript2/: __main__.py
src/job_run_notification_workbook/: job_run_notification_workbook.py
